finished monster kingdom page

--- a/html/system/monster-kingdom.html
+++ b/html/system/monster-kingdom.html
@@ -888,14 +888,41 @@
             </tr>
           </table>
           <h4 id="gazelle_pope_glitch">Gazelle Pope Glitch</h4>
-          <p>Text</p>
+          <p>If you defeat an ally monster that had their level halved by a Gazelle Pope, the lower level monster<br>will get added to Monster Kingdom, and the previous monster returns to Monster Kingdom if registered.<br>If you do decide to use this glitch, be sure not to perform it on unregistered monsters.</p>
+          <p>Growth will be halved for both the newly registered monster and the monster used for the glitch.</p>
+          <dl>
+            <dt>Necessary Items</dt>
+            <dd>Gazelle Pope Pot<br>Monster Pot (containing a monster of the same family + higher level than the lower level monster you want).<br>Possession Staff</dd>
+          </dl>
+          <p>Send out both monsters inside an area like Napus Storage, take control of Gazelle Pope using<br>the Possession Staff, lower the level of the target monster, and then simply defeat the target monster.<br>Be careful not to hit Shiren if you use Gazelle Pope to defeat the target monster.<br>Also note that you can send out multiple targets to lower the number of Possession Staff uses.</p>
+          <p>※ Lv4 monsters result in Lv2 monsters, so a Lv3 monster is needed separately for families with 4 levels.</p>
+          <p>The Monster Kingdom completion events can progress out of order if this glitch is used<br>to register the last monster needed for completion, so it's best to avoid doing so.</p>
+          <p>Lastly, Twisty Hani cannot lower ally monster levels, so it cannot be used in place of Gazelle Pope.</p>
           <h4 id="growth_limit_breaking">Growth Limit Breaking</h4>
-          <p>Text</p>
+          <dl>
+            <dt>Requirements</dt>
+            <dd>Gazelle Pope (ally or enemy)<br>Level 2 or higher monster (ally)<br>※ ally monster must have a higher growth limit after having their level halved.</dd>
+          </dl>
+          <p>Ally monsters can still grow stronger while their level is halved by a Gazelle Pope, so the idea is to<br>halve the level of a monster with low max growth → max out growth before the level down effect<br>wears off, at which point max growth returns to the lower value of the higher level monster.</p>
+          <p>Example: N'dubba 99yr has a max growth of 0, and N'dubba 50yr (halved) has a max growth of 52.</p>
+          <p>However, note that:</p>
+          <ul>
+            <li>Any growth over the limit won't be reflected in the monster's stats.</li>
+            <li>Defeating an enemy in a growth limit broken state resets growth to the regular max value.</li>
+            <li>Sending out the monster also resets growth to the regular max value.</li>
+          </ul>
+          <p>So there's no benefit to stats, it can't be used in combat, and it can't be sent outside of its pot.<br>That said, limit broken monsters can be registered to Monster Kingdom while retaining their growth,<br>so it could be fun to try for a "perfect" Monster Kingdom with limit broken monsters as trophies.</p>
           <h3 id="if_you_complete_monster_kingdom">If you complete Monster Kingdom...</h3>
-          <p>Text</p>
+          <p>The following rewards are granted when you complete Monster Kingdom:</p>
+          <ul>
+            <li>A Mamel icon gets added to your save file.</li>
+            <li>One-time exclusive Carp Streamer Castle Decoration is given to you. (Don't lose it!)</li>
+            <li>A new dungeon, Shrine's Hidden Hole (B), is unlocked.</li>
+            <li>Muchigoro gives you a Fast Clear Campaign Password.</li>
+            <li>More visitors arrive, including NPCs from the nearby Nabus Village.</li>
+          </ul>
         </div>
       </main>
-
     </div>
   </body>
 </html>
