rename talking seed, working on the MH page

--- a/html/dungeon/road-to-the-end.html
+++ b/html/dungeon/road-to-the-end.html
@@ -640,7 +640,7 @@
             <dt>Restock Scroll</dt>
             <dd>Read it inside shops to restock or change the items for sale.<br>Save it for shops between 71~90F if you're interested in obtaining an Upgrade Pot.</dd>
             <dt>Wall Collapse Scroll</dt>
-            <dd>Used to steal from shops or to search for Golden Stairs.<br>Recommended to read it on 9~10F, 24~29F, and 90~95F when searching for Golden Stairs.<br>Can also be used to quickly find a path to the stairs when Archdragon fire is wearing you down.<br>Items like Talking Seed, Slumber Scroll, Swap Staff, and Seal Staff can be used afterward to secure a path to the stairs.</dd>
+            <dd>Used to steal from shops or to search for Golden Stairs.<br>Recommended to read it on 9~10F, 24~29F, and 90~95F when searching for Golden Stairs.<br>Can also be used to quickly find a path to the stairs when Archdragon fire is wearing you down.<br>Items like Talk Seed, Slumber Scroll, Swap Staff, and Seal Staff can be used afterward to secure a path to the stairs.</dd>
             <dt>Escape Scroll</dt>
             <dd>Found on the ground on 30F, 50F, and 70F. However, there's no point in carrying it around if you're aiming for 99F.<br>That said, it can be nice to have on hand in case you find rare items like a Dragon Tile Bracelet or Upgrade Pot.</dd>
           </dl>
@@ -1304,7 +1304,7 @@
               <td>★ Shop exclusive, and only found between 71~90F.<br>Don't eat 400G grasses found in shops after 70F.</td>
             </tr>
             <tr>
-              <td>Talking Seed</td>
+              <td>Talk Seed</td>
               <td>500</td>
               <td>100</td>
               <td>★ Identified by selling price.<br>Don't eat it while you're inside a shop.</td>
@@ -1313,7 +1313,7 @@
               <td>Otogiriso</td>
               <td rowspan="3">500</td>
               <td rowspan="3">250</td>
-              <td rowspan="3">Safe to eat 500G grasses with a 250G selling price.<br>Otogiriso and Dragon Grass appear in shops between 71~90F.<br>So 500G grasses found in shops before 71F<br>are either Sight Grass or Talking Seed.</td>
+              <td rowspan="3">Safe to eat 500G grasses with a 250G selling price.<br>Otogiriso and Dragon Grass appear in shops between 71~90F.<br>So 500G grasses found in shops before 71F<br>are either Sight Grass or Talk Seed.</td>
             </tr>
             <tr>
               <td>Sight Grass</td>
@@ -1484,7 +1484,7 @@
                 <li>Throw 5 items that can damage it.</li>
                 <li>Use traps. Poison Trap will lower its strength to 0. Landmines will defeat it, but you won't gain experience.</li>
                 <li>Use an Explosion or Bomber statue to defeat it. However, you won't gain experience.</li>
-                <li>Throw grass at it, or eat a grass item next to it in hopes of it being Swift, Dragon, or Flame grass, Talking Seed, etc.</li>
+                <li>Throw grass at it, or eat a grass item next to it in hopes of it being Swift, Dragon, or Flame grass, Talk Seed, etc.</li>
                 <li>Read a scroll. Place it on the ground to check for Sanctuary Scroll first,<br>and then read it when Cave Mamel is next to you in case it's a Fear Scroll.</li>
               </ul>
             </dd>
@@ -5087,7 +5087,7 @@
                 <td>☆</td>
                 <td>☆</td>
                 <td></td>
-                <td>Talking Seed</td>
+                <td>Talk Seed</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td>☆</td>
