--- a/html/dungeon/sealed-room.html
+++ b/html/dungeon/sealed-room.html
@@ -3290,7 +3290,7 @@
                 <td>☆</td>
                 <td></td>
                 <td></td>
-                <td>Talking Seed</td>
+                <td>Talk Seed</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td>☆</td>
