--- a/html/dungeon/shrines-hidden-hole-b.html
+++ b/html/dungeon/shrines-hidden-hole-b.html
@@ -2746,7 +2746,7 @@
               </tr>
               <tr>
                 <td colspan="3" class="dungeon_item_category">Shield</td>
-                <td>Talking Seed</td>
+                <td>Talk Seed</td>
                 <td>☆</td>
                 <td></td>
                 <td>Possession Staff</td>
