--- a/html/item/grass.html
+++ b/html/item/grass.html
@@ -117,7 +117,7 @@
                   <td data-label="Info">Lowers level to 1 and reduces current HP to 1.</td>
                 </tr>
                 <tr>
-                  <td scope="row" data-label="Name"><a href="#talking_seed">Talking Seed</a></td>
+                  <td scope="row" data-label="Name"><a href="#talk_seed">Talk Seed</a></td>
                   <td data-label="Seal">-</td>
                   <td data-label="Buy">500</td>
                   <td data-label="Sell">100</td>
@@ -687,7 +687,7 @@
               </div>
             </div>
             <div>
-              <h3 id="talking_seed">Talking Seed (話の種)</h3>
+              <h3 id="talk_seed">Talk Seed (話の種)</h3>
               <div class="detail-entry">
                 <div class="detail-section1">
                   <p class="item_desc">Makes you tell jokes, superstitions, serial novels, and one-liners, which deals a random negative effect to all characters in the room.<br>Effects include slow, sleep, confusion, paralysis, freeze, anger NPCs, and ~30 damage.<br>If no one else is in the room, you become the target of the negative effect.</p>
