--- a/html/item/price-chart.html
+++ b/html/item/price-chart.html
@@ -332,7 +332,7 @@
                   <td>超</td>
                 </tr>
                 <tr>
-                  <td><a href="/shiren2/html/item/grass.html#talking_seed">Talking Seed</a></td>
+                  <td><a href="/shiren2/html/item/grass.html#talk_seed">Talk Seed</a></td>
                   <td>-</td>
                   <td rowspan="4">500</td>
                   <td>100</td>
