--- a/html/system/monster-house.html
+++ b/html/system/monster-house.html
@@ -59,30 +59,180 @@
             </li>
           </ul>
           <h2 id="monster_house_characteristics">Monster House Characteristics</h2>
-          <p>Text</p>
+          <p>Monster House is a place in a dungeon where the room is packed with many monsters and items.<br>They are generated at random, and can be generated in dungeons starting with Onigashima.<br>The ground is also covered in hidden traps, so care is needed when moving around the room.
+          </p>It's best to eat Sight Grass if you have it on hand, but otherwise check for traps one tile at a time.<br>If you successfully clear out a Monster House, you can claim the items as a reward.<br>Whether Monster Houses are positive or negative generally comes down to a player's skill.</p>
+          <p>The message "It's a (Monster Type) House!" is displayed when you first step foot into a Monster House,<br>and the music changes to one of two Monster House themes, depending on the type.</p>
+          <p>Every monster in the room will wake up the moment you enter the room,<br>and the location of all monsters on the current floor becomes visible on the map. (Like Scout Bracelet)</p>
+          <p>Special Monster Houses can include high level monsters outside of the dungeon's normal monster table,<br>making them extremely dangerous. Though that also works in reverse, where Special Monster Houses<br>in deeper floors can contain low level monsters, possibly making them easier than regular Monster Houses.</p>
+          <p>Note that Statues will never be generated inside of a Monster House.<br>The developers likely realized how chaotic it would be if a Bomber Statue or Trip Statue were present.</p>
           <h2 id="monster_house_strategy">Monster House Strategy</h2>
           <h3 id="detecting_beforehand">Detecting Beforehand</h3>
-          <p>Dl</p>
+          <dl>
+            <dt>Multiple monsters or items visible near room entrance</dt>
+            <dd></dd>
+            <dt>Room with many monsters visible using a Scout Bracelet</dt>
+            <dd></dd>
+            <dt>The "It's a Monster House!" message randomly gets displayed</dt>
+            <dd></dd>
+          </dl>
           <h3 id="good_items_for_monster_houses">Good Items for Monster Houses</h3>
-          <p>Dl</p>
+          <dl>
+            <dt>If you detect a Monster House beforehand</dt>
+            <dd></dd>
+            <dt>If you unknowingly step into a Monster House</dt>
+            <dd></dd>
+            <dt>Clearing out the Monster House</dt>
+            <dd></dd>
+          </dl>
           <h4 id="weapons">Weapons</h4>
-          <p>Dl</p>
+          <dl>
+            <dt>Razor Wind</dt>
+            <dd></dd>
+            <dt>Morning Star</dt>
+            <dd></dd>
+            <dt>Spear</dt>
+            <dd></dd>
+            <dt>Healing Sword</dt>
+            <dd></dd>
+            <dt>Type-Specific Weapons</dt>
+            <dd></dd>
+            <dt>Pickaxe, Wonder Pickaxe</dt>
+            <dd></dd>
+          </dl>
           <h4 id="shields">Shields</h4>
-          <p>Dl</p>
+          <dl>
+            <dt>Evasive Shield</dt>
+            <dd></dd>
+            <dt>Counter Shield</dt>
+            <dd></dd>
+            <dt>弟 Seal (Otogiriso)</dt>
+            <dd></dd>
+            <dt>眠 Seal (Slumber Scroll)</dt>
+            <dd></dd>
+          </dl>
           <h4 id="bracelets">Bracelets</h4>
-          <p>Dl</p>
+          <dl>
+            <dt>Pierce Bracelet</dt>
+            <dd></dd>
+            <dt>Bend Bracelet</dt>
+            <dd></dd>
+            <dt>Strength Bracelet</dt>
+            <dd></dd>
+            <dt>Phantasm Bracelet</dt>
+            <dd></dd>
+            <dt>Trapper Bracelet</dt>
+            <dd></dd>
+          </dl>
           <h4 id="scrolls">Scrolls</h4>
-          <p>Dl</p>
+          <dl>
+            <dt>Trap Activate Scroll</dt>
+            <dd></dd>
+            <dt>Lightning Scroll</dt>
+            <dd></dd>
+            <dt>Blaze Scroll</dt>
+            <dd></dd>
+            <dt>Slumber Scroll</dt>
+            <dd></dd>
+            <dt>Decoy Scroll</dt>
+            <dd></dd>
+            <dt>Trap Remove Scroll</dt>
+            <dd></dd>
+            <dt>Fear Scroll</dt>
+            <dd></dd>
+            <dt>Blank Scroll</dt>
+            <dd></dd>
+            <dt>Sanctuary Scroll</dt>
+            <dd></dd>
+          </dl>
           <h4 id="staves">Staves</h4>
-          <p>Dl</p>
+          <dl>
+            <dt>Swap Staff</dt>
+            <dd></dd>
+            <dt>Slow Staff</dt>
+            <dd></dd>
+            <dt>Fire Staff</dt>
+            <dd></dd>
+            <dt>Tunnel Staff</dt>
+            <dd></dd>
+            <dt>Miss Staff</dt>
+            <dd></dd>
+            <dt>Invisible Staff</dt>
+            <dd></dd>
+            <dt>Possession Staff</dt>
+            <dd></dd>
+          </dl>
           <h4 id="pots">Pots</h4>
-          <p>Dl</p>
+          <dl>
+            <dt>Grass Effect Pot</dt>
+            <dd></dd>
+            <dt>Sticky Pot</dt>
+            <dd></dd>
+          </dl>
           <h4 id="grass">Grass</h4>
-          <p>Dl</p>
+          <dl>
+            <dt>Twisty Grass</dt>
+            <dd></dd>
+            <dt>Swift Grass</dt>
+            <dd></dd>
+            <dt>Warp Grass</dt>
+            <dd></dd>
+            <dt>Talk Seed</dt>
+            <dd></dd>
+            <dt>Sight Grass</dt>
+            <dd></dd>
+            <dt>Revival Grass</dt>
+            <dd></dd>
+          </dl>
           <h4 id="projectiles">Projectiles</h4>
-          <p>Dl</p>
+          <dl>
+            <dt>Silver Arrow</dt>
+            <dd></dd>
+            <dt>Razor Arrow</dt>
+            <dd></dd>
+            <dt>Cannonball</dt>
+            <dd></dd>
+          </dl>
           <h2 id="dangerous_monsters">Dangerous Monsters</h2>
-          <p>Dl</p>
+          <dl>
+            <dt>Snacky</dt>
+            <dd></dd>
+            <dt>Dosukoi Family</dt>
+            <dd></dd>
+            <dt>Kengo Family</dt>
+            <dd></dd>
+            <dt>Dragon Family</dt>
+            <dd></dd>
+            <dt>Pumphantasm Family</dt>
+            <dd></dd>
+            <dt>Typhoon</dt>
+            <dd></dd>
+            <dt>Scorpion Family</dt>
+            <dd></dd>
+            <dt>Gazer Family</dt>
+            <dd></dd>
+            <dt>Porky Family</dt>
+            <dd></dd>
+            <dt>Tiger Tosser Family</dt>
+            <dd></dd>
+            <dt>Horse Ronin Family</dt>
+            <dd></dd>
+            <dt>Water Strider</dt>
+            <dd></dd>
+            <dt>Bored Kappa Family</dt>
+            <dd></dd>
+            <dt>Bow Boy Family</dt>
+            <dd></dd>
+            <dt>Wolf Droid Family</dt>
+            <dd></dd>
+            <dt>Sheep Priest Family</dt>
+            <dd></dd>
+            <dt>King Tusker Family</dt>
+            <dd></dd>
+            <dt>Bat Kangaroo Family</dt>
+            <dd></dd>
+            <dt>Gyadon Family</dt>
+            <dd></dd>
+          </dl>
           <h2 id="monster_house_types">Monster House Types</h2>
           <p>Text</p>
           <h3 id="monster_house_regular">Monster House (Regular)</h3>
