working on the monster house page

--- a/html/item/price-chart.html
+++ b/html/item/price-chart.html
@@ -1236,7 +1236,7 @@
                   <td>1500</td>
                 </tr>
                 <tr>
-                  <td colspan="6">Special Attack Weapons</td>
+                  <td colspan="6">Type Effective Weapons</td>
                 </tr>
                 <tr>
                   <td><a href="/shiren2/html/item/weapons.html#ghost_sickle">Ghost Sickle</a></td>
