--- a/html/system/monster-house.html
+++ b/html/system/monster-house.html
@@ -59,7 +59,7 @@
             </li>
           </ul>
           <h2 id="monster_house_characteristics">Monster House Characteristics</h2>
-          <p>Monster House is a place in a dungeon where the room is packed with many monsters and items.<br>They are generated at random, and can be generated in dungeons starting with Onigashima.<br>The ground is also covered in hidden traps, so care is needed when moving around the room.
+          <p>Monster House is a location in a dungeon where a room is packed with many monsters and items.<br>They are generated at random, and can be generated in dungeons starting with Onigashima.<br>The ground is also covered in hidden traps, so care is needed when moving around the room.
           </p>It's best to eat Sight Grass if you have it on hand, but otherwise check for traps one tile at a time.<br>If you successfully clear out a Monster House, you can claim the items as a reward.<br>Whether Monster Houses are positive or negative generally comes down to a player's skill.</p>
           <p>The message "It's a (Monster Type) House!" is displayed when you first step foot into a Monster House,<br>and the music changes to one of two Monster House themes, depending on the type.</p>
           <p>Every monster in the room will wake up the moment you enter the room,<br>and the location of all monsters on the current floor becomes visible on the map. (Like Scout Bracelet)</p>
@@ -69,76 +69,76 @@
           <h3 id="detecting_beforehand">Detecting Beforehand</h3>
           <dl>
             <dt>Multiple monsters or items visible near room entrance</dt>
-            <dd></dd>
+            <dd>There's a chance the room is a Monster House.<br>The likeliness increases further if you shoot an arrow into the room and hit an unseen monster.<br>Avoid entering the room if you don't have any items needed to take on a Monster House.</dd>
             <dt>Room with many monsters visible using a Scout Bracelet</dt>
-            <dd></dd>
-            <dt>The "It's a Monster House!" message randomly gets displayed</dt>
-            <dd></dd>
+            <dd>Guaranteed to be a Monster House.<br>Skip entering the room if you don't have any items needed to tackle a Monster House.<br>Check the sleeping monsters with the bracelet equipped to determine the type of Monster House.</dd>
+            <dt>The "It's a Monster House!" message randomly appeared</dt>
+            <dd>On rare occasions, a Dosukoi family monster can use its special attack to shift one of the sleeping monsters<br>outside of the Monster House, which results in the Monster House activating even if you're nowhere near it.<br>It's particularly annoying when there's a Landmine in the room, since a shifted item or monster could end up<br>landing on top of the Landmine, triggering an explosion and wiping out some of the items.</dd>
           </dl>
           <h3 id="good_items_for_monster_houses">Good Items for Monster Houses</h3>
           <dl>
             <dt>If you detect a Monster House beforehand</dt>
-            <dd></dd>
+            <dd>Thin out the number of monsters in the room before entering, using items such as:<br>Bracelets: Pierce, Bend, Phantasm<br>Projectiles: Wooden Arrow, Iron Arrow, Razor Arrow, Porky Stone, Cannonball<br><br>Picking off monsters one at a time from outside of the room is an excellent way to give yourself an advantage.<br>Monsters that receive any damage will instantly wake up, so be mindful of that when using items that pierce.</dd>
             <dt>If you unknowingly step into a Monster House</dt>
-            <dd></dd>
+            <dd>Take one step back so you end up in a hallway, only having to fight one enemy at a time.<br>You can hit three monsters per attack at the entrance if you have a Razor Wind or Morning Star.<br>If there are multiple entrances, or monsters with ranged attacks are present, take another step back.<br>You'll be safe from ranged attacks, and monsters that lost sight of Shiren will wander somewhere else.</dd>
             <dt>Clearing out the Monster House</dt>
-            <dd></dd>
+            <dd>Use the items mentioned below to give yourself an advantage!</dd>
           </dl>
           <h4 id="weapons">Weapons</h4>
           <dl>
-            <dt>Razor Wind</dt>
-            <dd></dd>
+            <dt>三 Seal (Razor Wind)</dt>
+            <dd>Swing your weapon at a room's entrance to deal damage to three enemies at once.<br>Simple yet powerful seal that should be synthesized onto any main weapon whenever possible.</dd>
             <dt>Morning Star</dt>
-            <dd></dd>
+            <dd>Two-handed weapon that can be used like Razor Wind.<br>You might be tempted to remain in the Monster House to deal 5 hits, but it's far too dangerous with 0 defense.</dd>
             <dt>Spear</dt>
-            <dd></dd>
-            <dt>Healing Sword</dt>
-            <dd></dd>
-            <dt>Type-Specific Weapons</dt>
-            <dd></dd>
+            <dd>Regular attacks can pierce through enemies 2 tiles forward.<br>As long as you don't miss, you can defeat enemies without damage by taking 2 steps back at the beginning.</dd>
+            <dt>回 Seal (Healing Sword)</dt>
+            <dd>Excellent for restoring HP during extended fights.<br>The standard must-have seal for any main weapon, along with the 三 seal (Razor Wind).</dd>
+            <dt>Type Effective Weapons (Drain Buster, Ghost Sickle, etc.)</dt>
+            <dd>These seals shine when you're up against Special Monster Houses.</dd>
             <dt>Pickaxe, Wonder Pickaxe</dt>
-            <dd></dd>
+            <dd>Dig around the edge of the room before entering a Monster House to thin out monsters along the walls.<br>Be careful not to dig too much, resulting in an expanded room with nowhere to run.</dd>
           </dl>
           <h4 id="shields">Shields</h4>
           <dl>
-            <dt>Evasive Shield</dt>
-            <dd></dd>
-            <dt>Counter Shield</dt>
-            <dd></dd>
+            <dt>見 Seal (Evasive Shield)</dt>
+            <dd>Increased evasion means you take less damage during extended fights.</dd>
+            <dt>バ Seal (Counter Shield)</dt>
+            <dd>You can get by without it, but it helps increase damage output during extended fights.</dd>
             <dt>弟 Seal (Otogiriso)</dt>
-            <dd></dd>
+            <dd>Effectively reduces the amount of damage you take.</dd>
             <dt>眠 Seal (Slumber Scroll)</dt>
-            <dd></dd>
+            <dd>Helps if you don't have enough attack power to defeat enemies in a single hit.<br>Can also help to shut down monsters that move or attack through walls.</dd>
           </dl>
           <h4 id="bracelets">Bracelets</h4>
           <dl>
             <dt>Pierce Bracelet</dt>
-            <dd></dd>
+            <dd>Can be used to thin out the number of monsters before entering the room,<br>or to clear out the line of monsters that chase after you as a result of waking the room up.<br>Watch out for Shihan when relying on bracelets such as this one, since it has the ability to disarm bracelets.<br>Check out the <a href="/shiren2/html/playing/advanced-techniques.html#how_to_use_pierce_bracelet">How to Use Pierce Bracelet</a> section for more tips.</dd>
             <dt>Bend Bracelet</dt>
-            <dd></dd>
+            <dd>Can be used to attack monsters along the walls before entering the room.</dd>
             <dt>Strength Bracelet</dt>
-            <dd></dd>
+            <dd>Higher strength means you're more likely to defeat enemies in a single hit.</dd>
             <dt>Phantasm Bracelet</dt>
-            <dd></dd>
+            <dd>Can be used to defeat monsters along the walls before entering the room.<br>Hide inside a wall after waking the room up to clear the room without taking damage.</dd>
             <dt>Trapper Bracelet</dt>
-            <dd></dd>
+            <dd>Monster Houses are full of traps, so enemies will trigger traps left and right.<br>However, note that dangerous traps like Landmine or Flood Trap could be present,<br>and Shiren's attack is drastically lowered while he has Trapper Bracelet equipped.</dd>
           </dl>
           <h4 id="scrolls">Scrolls</h4>
           <dl>
             <dt>Trap Activate Scroll</dt>
-            <dd></dd>
+            <dd>Similar to Trapper Bracelet, but guaranteed to activate all traps in the room when read.<br>Always keep in mind that you could end up triggering a Landmine or Flood Trap.</dd>
             <dt>Lightning Scroll</dt>
-            <dd></dd>
+            <dd>Deals roughly 30 damage to all enemies in the room.<br>One scroll is enough to clear out an entire Monster House early on, but it isn't as effective on deeper floors.<br>That said, it can still be a nice way to soften enemies up so that you can defeat them in a single attack.</dd>
             <dt>Blaze Scroll</dt>
-            <dd></dd>
+            <dd>Deals 20 damage per turn to any character standing in the fire that generates from reading the scroll.<br>Items on the ground will burn up, and tiles with traps will not be set on fire.<br>It's best to read this in a hallway to minimize item loss.</dd>
             <dt>Slumber Scroll</dt>
-            <dd></dd>
+            <dd>Puts all monsters in the room to sleep for 10 turns.<br>Note that mosnters will move at double speed after waking up from this effect.<br>It's best to read this when the exit is in the middle of a Monster House, rather than rely on it to clear one out.</dd>
             <dt>Decoy Scroll</dt>
-            <dd></dd>
+            <dd>Provides a big advantage while inside the room, but only lasts for 10 turns.<br>It's best to either defeat monsters quickly, or retreat before it wears off and put yourself in a better position.<br>Avoid reading it when you don't have enough space to summon shadows.</dd>
             <dt>Trap Remove Scroll</dt>
-            <dd></dd>
+            <dd>Nice to read after clearing out the Monster House.</dd>
             <dt>Fear Scroll</dt>
-            <dd></dd>
+            <dd>Plays well with the 三 seal (Razor Wind).<br>Can be used to have a monster defeat another monster, but you'd need a way to defeat the leveled up monster.</dd>
             <dt>Blank Scroll</dt>
             <dd></dd>
             <dt>Sanctuary Scroll</dt>
