working on the monster house page

--- a/html/system/monster-house.html
+++ b/html/system/monster-house.html
@@ -140,98 +140,98 @@
             <dt>Fear Scroll</dt>
             <dd>Plays well with the 三 seal (Razor Wind).<br>Can be used to have a monster defeat another monster, but you'd need a way to defeat the leveled up monster.</dd>
             <dt>Blank Scroll</dt>
-            <dd></dd>
+            <dd>Can be used as any scroll that you've read in the past.<br>Choose an option that fits your current situation and needs.</dd>
             <dt>Sanctuary Scroll</dt>
-            <dd></dd>
+            <dd>Prevents monsters from using regular attacks when they are next to you.<br>Note that ranged attacks and special attacks from a distance can still hit you.<br>Take a step back and place it in a hallway if there was a trap at the entrace of the room.</dd>
           </dl>
           <h4 id="staves">Staves</h4>
           <dl>
             <dt>Swap Staff</dt>
-            <dd></dd>
+            <dd>Useful when you want to quickly move toward the room's entrace, or if the stairs is in the middle of the room.<br>Note that the trap is guaranteed to activate if one is present on the destination tile.</dd>
             <dt>Slow Staff</dt>
-            <dd></dd>
+            <dd>Swing it at the first monster following you into a hallway to have an easier time escaping the situation.</dd>
             <dt>Fire Staff</dt>
-            <dd></dd>
+            <dd>Retreat into a hallway and swing it to burn the line of monsters that followed you.<br>Use alongside Silver Arrows or Pierce Bracelet to quickly clear out enemies.</dd>
             <dt>Tunnel Staff</dt>
-            <dd></dd>
+            <dd>Create new hallways, allowing you to thin out more monsters using projectiles before entering the room.<br>Nice when Bored Kappa family mosnters are waiting on top of items, or if you don't have a Pierce Bracelet.<br>Be careful not to dig in a way that expands the room with you standing inside of it.</dd>
             <dt>Miss Staff</dt>
-            <dd></dd>
+            <dd>Effectively shuts down a monster's regular attacks.<br>Plays well with Razor Wind, since you can use a monster as a barricade while attacking the sides.</dd>
             <dt>Invisible Staff</dt>
-            <dd></dd>
+            <dd>Invisible monsters move in a similar fashion to confusion, so this staff makes it easier to escape.</dd>
             <dt>Possession Staff</dt>
-            <dd></dd>
+            <dd>Nice to have for Special Monster Houses, where you can take control of a high level monster.<br>Be careful of ranged attacks while you're controlling a monster.</dd>
           </dl>
           <h4 id="pots">Pots</h4>
           <dl>
             <dt>Grass Effect Pot</dt>
-            <dd></dd>
+            <dd>Monster Houses are one of the few situations where Grass Effect Pots have a notable use.<br>Check out the <a href="/shiren2/html/playing/advanced-techniques.html#how_to_use_grass_effect_pot">How to Use Grass Effect Pot</a> section for tips.</dd>
             <dt>Sticky Pot</dt>
-            <dd></dd>
+            <dd>You might be able to slow down the train of monsters by throwing it at the first monster following you.<br>Throwing it with a Pierce Bracelet equipped lets you trap multiple monsters,<br>and throwing a sturdy Sticky Pot will trap a monster inside the pot until it's defeated by an attack.</dd>
           </dl>
           <h4 id="grass">Grass</h4>
           <dl>
             <dt>Twisty Grass</dt>
-            <dd></dd>
+            <dd>Use with a Pierce Bracelet or Grass Effect Pot to lower the level of multiple monsters at once.</dd>
             <dt>Swift Grass</dt>
-            <dd></dd>
+            <dd>Eat to move faster, allowing you to act twice per turn and either run away or fight at an advantage.</dd>
             <dt>Warp Grass</dt>
-            <dd></dd>
+            <dd>Eat it when you're cornered and need to escape the situation.</dd>
             <dt>Talk Seed</dt>
-            <dd></dd>
+            <dd>Inflicts a random effect to all monsters in the room, possibly slowing or paralyzing enemies.</dd>
             <dt>Sight Grass</dt>
-            <dd></dd>
+            <dd>Lets you skip having to manually check for traps.<br>Can be used to locate a Pitfall to advance to the next floor.</dd>
             <dt>Revival Grass</dt>
-            <dd></dd>
+            <dd>Great to have as backup in case something goes wrong.</dd>
           </dl>
           <h4 id="projectiles">Projectiles</h4>
           <dl>
             <dt>Silver Arrow</dt>
-            <dd></dd>
+            <dd>Retreat into a hallway and shoot to deal damage to a line of monsters.</dd>
             <dt>Razor Arrow</dt>
-            <dd></dd>
+            <dd>Lets you perform an attack in a pattern similar to a Silver Arrow + Razor Wind.<br>Has somewhat low attack power, and you'll want to be careful not to hit Shopkeepers or Traders.</dd>
             <dt>Cannonball</dt>
-            <dd></dd>
+            <dd>Be careful not to self-destruct by getting caught in the explosion.</dd>
           </dl>
           <h2 id="dangerous_monsters">Dangerous Monsters</h2>
           <dl>
             <dt>Snacky</dt>
-            <dd></dd>
+            <dd>Often found inside Monster Houses early on.<br>A monster defeating a Snacky can quickly turn the tide of the situation, depending on what monster levels up.</dd>
             <dt>Dosukoi Family</dt>
-            <dd></dd>
+            <dd>Shifts items and monsters around, activating traps if anything moves onto a tile that has a hidden trap.<br>You might suddenly find yourself inside the Monster House, even if you were at the room's entrance.<br>Flood Traps and Landmines can cause problems, and landing on a Sleep Trap likely guarantees a collapse.</dd>
             <dt>Kengo Family</dt>
-            <dd></dd>
+            <dd>Having your equipment disarmed can quickly turn a good situation into a bad one.<br>However, the scarier situation is item loss due to equipment hitting a monster after being knocked away.<br>Losing your equipment (especially your shield) can outright end an adventure on deeper floors.</dd>
             <dt>Dragon Family</dt>
-            <dd></dd>
+            <dd>Sky Dragon's flame can reach you if you're at the room's entrance.<br>Dragons can level up by defeating other monsters, and Archdragon can breathe fire at you from anywhere.<br>It's best to avoid Monster Houses on floors where this monster family is present.</dd>
             <dt>Pumphantasm Family</dt>
-            <dd></dd>
+            <dd>Can move and attack through walls.<br>Place a Sanctuary Scroll on the ground, or move into a different room to deal with them.</dd>
             <dt>Typhoon</dt>
-            <dd></dd>
+            <dd>Can appear in Ghost Houses.<br>Moves at triple speed and has the ability to attack through walls.<br>Deal with it in a similar fashion to Pumphantasm family monsters.</dd>
             <dt>Scorpion Family</dt>
-            <dd></dd>
+            <dd>Scorpion isn't much of an issue, but Demon Scorpion and Stun Scorpion have terrifying special attacks.</dd>
             <dt>Gazer Family</dt>
-            <dd></dd>
+            <dd>Its hypnosis not only wastes a turn, but has the potential to unequip your shield or consume Revival Grass.<br>If you don't have the 山 seal (Echo Shield), use items to avoid giving it a chance to use its special attack.</dd>
             <dt>Porky Family</dt>
-            <dd></dd>
+            <dd>Its ranged attacks can quickly wear down your HP.<br>Often leads to a collapse if you run into a Power House early on.</dd>
             <dt>Tiger Tosser Family</dt>
-            <dd></dd>
+            <dd>Has the potential to block exits with the monsters it throws.</dd>
             <dt>Horse Ronin Family</dt>
-            <dd></dd>
+            <dd>Shoots Silver Arrows from a distance.<br>Can level up as a result of its arrows piercing through other monsters.</dd>
             <dt>Water Strider</dt>
-            <dd></dd>
+            <dd>Can potentially throw Gitan or other high damage items that are on the ground.</dd>
             <dt>Bored Kappa Family</dt>
-            <dd></dd>
+            <dd>Moves toward items and throws them at you.</dd>
             <dt>Bow Boy Family</dt>
-            <dd></dd>
+            <dd>Its special attacks can potentially defeat other monsters, resulting in level ups.<br>Cranky Tank quickly destroys walls and puts you in an unsafe situation.<br>Recommended to use a Water Pot to seal Cranky Tank if you have one on hand.</dd>
             <dt>Wolf Droid Family</dt>
-            <dd></dd>
+            <dd>High stats, and has the potential to level up as a result of its bomb explosions.</dd>
             <dt>Sheep Priest Family</dt>
-            <dd></dd>
+            <dd>Getting hit by a stat lowering special attack makes it difficult to defeat enemies.</dd>
             <dt>King Tusker Family</dt>
-            <dd></dd>
+            <dd>Can seal, slow, or quarter your current HP depending on the monster's level. </dd>
             <dt>Bat Kangaroo Family</dt>
-            <dd></dd>
+            <dd>Provides support for other monsters in the room.<br>Swift Staff and Heal Staff are particularly troublesome,<br>but Devil Kangaroo's Invisible Staff might actually give you some time to escape.</dd>
             <dt>Gyadon Family</dt>
-            <dd></dd>
+            <dd>Can pluck items, weakning them and dropping the item on the ground below.<br>It's particularly bad if it plucks an item you were planning on using, since it'll fall to the enemy side.<br>If you don't have the ト seal (Walrus Shield), don't hesitate to use items like Seal Staff.</dd>
           </dl>
           <h2 id="monster_house_types">Monster House Types</h2>
           <p>Text</p>
